# SimpleSteamWrapper

./: Cargo.toml  LICENSE  README.md  build.rs
.gitea/workflows/: publish.yml
src/: command_helpers.rs  gpu.rs  gui.rs  io_utils.rs  main.rs  prefix_gui.rs  slint_utils.rs  tweak_collector.rs
src/compatibility_tools/: app_prefix.rs  compat_tool.rs  compat_tools_list.rs  compat_tools_wrapper.rs  installed_steam_apps.rs  mod.rs  remote_compat_tools_provider.rs  steam.rs  steam_compat_tools_list.rs  updatable_compat_tool.rs
src/config/: config.rs  config_loader.rs  global_config.rs  mod.rs  serialized_config_utils.rs
src/dl_manager/: client.rs  dl_manager.rs  dl_manager_installer.rs  downloadable_asset.rs  github_api.rs  mod.rs  remote_compat_tools.rs  updatable_compat_tool.rs
src/gpu_tools/: gpu.rs  gpu_list.rs  mod.rs  nvidia_gpu.rs
src/gui/: dialog.rs  dl_manager_gui.rs  gui_utils.rs  install_modal_gui.rs  main_gui.rs  mod.rs  prefix_gui.rs
src/gui/globals/: global_init_trait.rs  init_app_conf.rs  init_env_vars.rs  init_hard_refresh.rs  mod.rs
src/gui/slint/: dl_manager.slint  install_modal.slint  main.slint  main_gui.slint  prefix_settings_gui.slint
src/install/: install.rs  install_modal.rs  mod.rs
src/runner/: compat_tools_wrapper.rs  game_process_wrapper.rs  mod.rs  runtime.rs
src/slint/: app.slint  confirm_dialog.slint  dl_manager.slint  main_gui.slint  prefix_settings_gui.slint  simple_dialog.slint
src/slint/globals/: app_conf.slint  env_vars_settings.slint  hard_refresh.slint
src/slint/widgets/: env_vars_editor.slint  gamescope_edit.slint
src/steam/: installed_steam_apps.rs  mod.rs  steam.rs
src/tweaks/: custom_env_vars.rs  dxvk_hud_mode.rs  gamemode.rs  gamescope.rs  mangohud.rs  mod.rs  no_dx12_dxr.rs  nvidia_vram_workarounds.rs  proton_nvapi.rs  proton_nvapi_vkreflex.rs  proton_prefer_sdl.rs  proton_wayland.rs  proton_wayland_hdr.rs  select_gpu.rs  tweak.rs
src/ui/: app_conf.slint  install_modal.slint  main.slint  main_gui.slint  prefix_settings_gui.slint
src/utils/: command_utils.rs  find_index.rs  io_utils.rs  mod.rs  regex_utils.rs  rs_utils.rs  slint_utils.rs
src/vdf_tools/: binary_vdf_parser.rs  mod.rs  steam_appinfo_vdf_parser.rs  steam_packageinfo_vdf_parser.rs  vdf_simple_parser.rs
tweaks_macro/: Cargo.toml
tweaks_macro/src/: lib.rs
