[package]
name = "Simple-Steam-Wrapper"
version = "1.0.0"
edition = "2021"

[dependencies]
tweaks_macro = { path = "tweaks_macro" }
device_query = "4.0.1"
vdf-reader = "0.3.1"
log = "0.4.27"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pci-info = "0.3.4"
pci-ids = "0.2.5"
regex = "1.11.1"
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
inventory = "0.3.21"
once_cell = "1.21.3"
anyhow = "1.0.100"
slint = { version = "1.12.1", default-features = false, features = ["compat-1-2", "renderer-winit-skia","backend-winit"] }
rfd = "0.15.4"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "process", "fs", "sync"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
which = "8.0.0"
shlex = "1.3.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "rustls-no-provider"] }
serde_json = "1.0.149"
autocompress = "0.6.0"
rand = "0.9.2"
tokio-util = { version = "0.7.18", features = ["io"] }
futures-util = "0.3.31"
tokio-tar = "0.3.1"
libc = "0.2.175"
fs_extra = "1.3.0"

[build]
rustc-wrapper = "sccache"

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
